force-app/main/default/objects/Terminal__c/Terminal__c.object-meta.xml
<CustomObject>
    <description>Terminals across US &amp; Canada</description>
    <label>Terminal</label>
    <nameField>
        <label>TERMINAL #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>