force-app/main/default/objects/Terminal__c/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <label>ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>