force-app/main/default/objects/Terminal__c/fields/PHONE__c.field-meta.xml
<CustomField>
    <fullName>PHONE__c</fullName>
    <label>PHONE #</label>
    <type>Phone</type>
</CustomField>