force-app/main/default/objects/Terminal__c/fields/TERMINAL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_TYPE__c</fullName>
    <label>TERMINAL TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>