force-app/main/default/objects/Terminal__c/fields/ZIP_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_POSTAL_CODE__c</fullName>
    <label>ZIP / POSTAL CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>