force-app/main/default/objects/Terminal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAME__c</columns>
    <columns>ADDRESS__c</columns>
    <columns>CITY__c</columns>
    <columns>STATE_PROVINCE__c</columns>
    <columns>ZIP_POSTAL_CODE__c</columns>
    <columns>COUNTRY__c</columns>
    <columns>PHONE__c</columns>
    <columns>TERMINAL_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>